--- a/clawd-pager.yaml
+++ b/clawd-pager.yaml
@@ -2,6 +2,7 @@ esphome:
   name: clawd-pager
   friendly_name: "Clawd Pager"
   on_boot:
+    priority: -10
     then:
       - rtttl.play: "Startup:d=4,o=5,b=180:c,e,g,c6"
 
@@ -10,13 +11,23 @@ esp32:
   framework:
     type: arduino
 
-# Log via USB by default for debugging
+external_components:
+  - source: github://martydingo/esphome-axp192
+    components: [axp192]
+
+i2c:
+  id: bus_a
+  sda: 21
+  scl: 22
+  scan: false
+
 logger:
+  level: DEBUG
 
-# Enable Home Assistant API
 api:
+  encryption:
+    key: "AoB3jpN0iVhstcEULCY9ESHY9WoArEH/4qFvlw2ckTs="
 
-# Enable OTA updates
 ota:
   - platform: esphome
 
@@ -24,13 +35,7 @@ wifi:
   ssid: "FlyingChanges"
   password: "flyingchanges"
   fast_connect: true
-  
-  # Fallback AP
-  ap:
-    ssid: "Clawd-Pager-Fallback"
-    password: "clawd-recovery"
 
-# Time Source (Required for clock)
 time:
   - platform: sntp
     id: sntp_time
@@ -45,113 +50,93 @@ rtttl:
   output: buzzer_pwm
   id: buzzer
 
-# Sensors
 sensor:
   - platform: wifi_signal
     name: "WiFi Signal"
     id: wifi_sig
     update_interval: 10s
+  - platform: axp192
+    model: M5STICKC
+    address: 0x34
+    i2c_id: bus_a
+    update_interval: 30s
+    battery_level:
+      name: "Battery Level"
+      id: battery_level
 
 text_sensor:
   - platform: homeassistant
-    id: ha_status
+    id: ha_message
     entity_id: input_text.clawd_status
     on_value:
       then:
         - rtttl.play: "Notify:d=4,o=6,b=200:c,e,g"
-        - component.update: my_display
 
-# Buttons
 binary_sensor:
   - platform: gpio
-    pin:
-      number: GPIO37
-      inverted: true
-    name: "Button A"
+    pin: { number: GPIO39, inverted: true }
+    name: "Button B"
     on_press:
       then:
-        - rtttl.play: "Blip:d=32,o=7,b=100:c"
-        - component.update: my_display
+        - rtttl.play: "Blip:d=32,o=6,b=100:e"
+        - homeassistant.service:
+            service: input_text.set_value
+            data:
+              entity_id: input_text.clawd_status
+              value: "Button B Pressed!"
 
-# Display Setup
 spi:
   clk_pin: GPIO13
   mosi_pin: GPIO15
-
-captive_portal:
 
 display:
   - platform: st7789v
     id: my_display
     model: TTGO_TDisplay_135x240
-    backlight_pin:
-      number: GPIO27
-      inverted: true
     cs_pin: GPIO5
     dc_pin: GPIO23
     reset_pin: GPIO18
     rotation: 270
-    update_interval: 1s # Faster update for clock
+    update_interval: 1s
     lambda: |-
-      // --- COLOR PALETTE ---
-      Color c_bg = Color(0, 0, 0);          // Black
-      Color c_header = Color(0, 255, 255);  // Cyan
-      Color c_text = Color(255, 255, 255);  // White
-      Color c_accent = Color(255, 0, 128);  // Magenta
-      Color c_warn = Color(255, 200, 0);    // Orange/Yellow
+      auto color_cyan = Color(0x00FFFF);
+      auto color_green = Color(0x00FF00);
+      auto color_white = Color(0xFFFFFF);
+      auto color_grey = Color(0x333333);
+      auto color_yellow = Color(0xFFFF00);
 
-      // --- STATIC LAYOUT ---
-      it.fill(c_bg);
+      it.fill(Color::BLACK);
+      it.line(0, 20, 240, 20, color_cyan);
       
-      // Top Bar (Status)
-      it.line(0, 20, 240, 20, c_header);
-      
-      // Time
       if (id(sntp_time).now().is_valid()) {
-        auto time = id(sntp_time).now();
-        it.strftime(5, 3, id(font_small), c_header, TextAlign::TOP_LEFT, "%H:%M", time);
-      } else {
-        it.print(5, 3, id(font_small), c_warn, TextAlign::TOP_LEFT, "--:--");
+        it.strftime(5, 3, id(font_small), color_cyan, TextAlign::TOP_LEFT, "%H:%M:%S", id(sntp_time).now());
       }
 
-      // WiFi Icon (Simple Bars)
+      if (id(ha_message).has_state()) {
+        it.print(120, 3, id(font_small), color_green, TextAlign::TOP_CENTER, "SYNCED");
+      } else {
+        it.print(120, 3, id(font_small), color_yellow, TextAlign::TOP_CENTER, "WAITING");
+      }
+
+      it.printf(235, 3, id(font_small), color_cyan, TextAlign::TOP_RIGHT, "%.0f%%", id(battery_level).state);
+
+      if (id(ha_message).has_state()) {
+        it.print(120, 65, id(font_body), color_white, TextAlign::CENTER, id(ha_message).state.c_str());
+      } else {
+        it.print(120, 65, id(font_body), color_yellow, TextAlign::CENTER, "Connecting...");
+      }
+
+      it.line(0, 115, 240, 115, color_grey);
       int rssi = id(wifi_sig).state;
-      int bars = 0;
-      if (rssi > -50) bars = 4;
-      else if (rssi > -65) bars = 3;
-      else if (rssi > -75) bars = 2;
-      else if (rssi > -90) bars = 1;
-
-      int x_wifi = 230;
-      int y_wifi = 15;
-      for (int i = 0; i < 4; i++) {
-        Color bar_color = (i < bars) ? c_header : Color(50, 50, 50);
-        it.filled_rectangle(x_wifi - (i * 4), y_wifi - (i * 3), 3, (i * 3) + 2, bar_color);
-      }
-
-      // --- MAIN CONTENT ---
-      if (id(ha_status).has_state()) {
-        // Draw a fancy border box
-        it.rectangle(0, 25, 240, 110, c_accent);
-        
-        // Message
-        it.print(120, 75, id(font_body), c_text, TextAlign::CENTER, id(ha_status).state.c_str());
-        
-      } else {
-        it.print(120, 75, id(font_body), c_warn, TextAlign::CENTER, "WAITING...");
-        
-        // Scanning Animation (Simple horizontal moving line)
-        int scan_x = (millis() / 10) % 240;
-        it.line(scan_x, 130, scan_x + 20, 130, c_accent);
-      }
+      it.printf(5, 120, id(font_small), color_grey, TextAlign::TOP_LEFT, "WIFI: %d dBm", rssi);
+      
+      float uptime = millis() / 1000.0;
+      it.printf(235, 120, id(font_small), color_grey, TextAlign::TOP_RIGHT, "%.0fs", uptime);
 
 font:
-  - file: "gfonts://Orbitron"
-    id: font_header
-    size: 20
-  - file: "gfonts://Roboto"
+  - file: "gfonts://Roboto Mono"
     id: font_body
-    size: 28
+    size: 16
   - file: "gfonts://Roboto Mono"
     id: font_small
-    size: 16
+    size: 12
