--- a/clawd-pager-epaper.yaml
+++ b/clawd-pager-epaper.yaml
@@ -39,13 +39,18 @@ spi:
 
 display:
   - platform: waveshare_epaper
-    model: 1.54in-m5stickc-b  # Adjust based on actual controller
+    # Common Waveshare 1.54" 200x200 models:
+    # - "1.54in" = SSD1681 (black/white only)
+    # - "1.54in-m5stickc-b" = IL0373 (black/white/red)
+    # Check your board's controller chip marking
+    model: 1.54in  # Start with basic b/w model
     cs_pin: GPIO10
     dc_pin: GPIO11
     reset_pin: GPIO12
     busy_pin: GPIO13
     rotation: 0
     update_interval: 30s  # ePaper refresh is slow, don't spam
+    full_update_every: 30  # Full refresh every 30 updates to prevent ghosting
     lambda: |-
       // High-density dashboard layout for 200x200 ePaper
       auto mode = id(display_mode).state;
