--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,21 @@
-# Gitignore settings for ESPHome
-# This is an example and may include too much for your use-case.
-# You can modify this file to suit your needs.
-/.esphome/
-/secrets.yaml
-/venv/
-__pycache__/
-*.pyc
+# ESPHome build artifacts
+.esphome/
+.pioenvs/
+.piolibdeps/
+
+# Secrets (never commit!)
+secrets.yaml
+
+# Build outputs
+*.bin
+*.elf
+
+# Editor files
+.vscode/
+.idea/
+*.swp
+*~
+
+# OS files
+.DS_Store
+Thumbs.db
